# Advanced-ML---Kaggle-Competition

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: log_reg.joblib  pca.joblib  poly.joblib  poly_2_week1.joblib  svc_week2.joblib  svc_week3.joblib
notebooks/: Islam_Tahmidul-24587139-Week1_LogisticRegression.ipynb  Islam_Tahmidul-24587139-Week2_DT.ipynb  Islam_Tahmidul-24587139-Week2_SVM.ipynb  Islam_Tahmidul-24587139-Week3_SVM.ipynb  Untitled.ipynb  copy_Islam_Tahmidul-24587139-Week1_LogisticRegression.ipynb
reports/: EXPERIMENT REPORT - Week 1.docx  EXPERIMENT REPORT - Week 2.docx  EXPERIMENT REPORT - Week 3.docx
